contain width in parent to stop overflow

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,25 @@
 #container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    border: 9px solid;
+    align-content: center;
+    justify-items: center;
+    width: 960px;
+    height: 960px;
+    
 }
 
 .inDiv {
     border: 1px solid rgb(0, 0, 0);
-    height: 16px;
-    width: 16px;
-    
+}
+
+.outDiv{
+    max-width: 960px;
+    display: flex;
 }
 
 body{
     background-color: rgb(180, 154, 240);
+    align-content: center;
+    justify-items: center;
 }
 
 .btn{
@@ -21,4 +28,8 @@ body{
     margin-bottom: 15px;
     margin-top: 15px;
     padding: 1px;
+}
+
+html {
+  box-sizing: border-box;
 }
